# rivett

./: .gitignore  CHANGELOG.md  Cargo.toml  INTERACTIONS.md  README.md  version
.github/workflows/: release.yml
resources/: com.minimalhumans.rivett.metainfo.xml  com.rivett.rivett.metainfo.xml  rivett.desktop
src/: app.rs  db.rs  db_test_local.rs  image_loader.rs  lib.rs  main.rs  metadata.rs  renderer.rs  session.rs  settings.rs  utilities.rs  viewer.rs
src/shaders/: gamma.frag  gamma.vert
wix/: Dialog.kra  Theme.wxl  Theme.xml  banner.kra  bundle.wxs  main.wxs
