[package]
name        = "rivett"
version = "0.3.1"
authors     = ["Jesse Kretschmer"]
edition     = "2021"
description = "Rust Image Vetting Tool — fast, keyboard-driven image viewer"
license     = "MIT"

[package.metadata.bundle]
name = "rivett"
identifier = "com.rivett.rivett"
icon = ["resources/icon.png"]
resources = []
copyright = "Copyright © 2026 Jesse Kretschmer (Minimal Humans)"
category = "Graphics and Design"
short_description = "Fast image vetting tool."
long_description = """
Rivett is a fast, keyboard-driven image viewer designed for quick sorting and vetting of large image collections.
"""

[[bin]]
name = "rivett"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------

[dependencies]
# UI — egui (immediate mode) + eframe host with OpenGL backend.
# Switch "glow" → "wgpu" here if you prefer the wgpu renderer.
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.28"
egui_glow = "0.28"
glow = "0.13"

# Image decoding (v1 formats only; keep default-features off for faster builds)
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "exr",
] }
resvg = "0.42"
rawloader = "0.37"
mp4 = "0.14"

# Persistence
rusqlite    = { version = "0.31", features = ["bundled"] }   # bundles SQLite
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"

# Utilities
log         = "0.4"
env_logger  = "0.11"
uuid        = { version = "1", features = ["v4"] }
dirs        = "5"   # platform config/data directories
trash       = "5"   # recycle bin support
rfd         = "0.14"  # native file/folder dialogs
showfile    = "0.1"   # open file manager
png         = "0.17"  # PNG chunk access for metadata (already transitive via image)
exif        = { package = "kamadak-exif", version = "0.6" }
drag        = "2"     # file drag-out to other applications
raw-window-handle = "0.6"  # explicit dep for drag-out window handle construction
img-parts   = "0.3"   # JPEG/PNG segment manipulation for lossless EXIF orientation writes
chrono      = "0.4"
bytemuck    = { version = "1", features = ["derive"] }
arboard = "3.6.1"

# ---------------------------------------------------------------------------
# Dev / test dependencies
# ---------------------------------------------------------------------------

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"
vcpkg  = "0.2"

# Faster build
[profile.release-local]
inherits      = "release"
lto           = false
codegen-units = 16
strip         = false

# ---------------------------------------------------------------------------
# Release profile — small, fast binary
# ---------------------------------------------------------------------------
[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
