[package]
name        = "rivett"
version = "0.5.2"
authors     = ["Jesse Kretschmer"]
edition     = "2021"
description = "Rust Image Vetting Tool — fast, keyboard-driven image viewer"
license     = "MIT"
homepage    = "https://github.com/krets/rivett"
repository  = "https://github.com/krets/rivett"

[package.metadata.bundle]
name = "Rivett"
identifier = "com.minimalhumans.rivett"
icon = ["resources/icon.png"]
resources = ["resources/rivett.desktop", "resources/com.minimalhumans.rivett.metainfo.xml"]
authors = ["Jesse Kretschmer <jesse@krets.com>"]
license = "MIT"
copyright = "Copyright © 2026 Jesse Kretschmer (Minimal Humans)"
category = "Graphics and Design"
short_description = "Fast, keyboard-driven image vetting tool."
long_description = """
Rivett is a high-performance image vetting tool designed for photographers and creatives who need to quickly sort through large collections of images. It features a keyboard-centric workflow, fast image loading, and a clean interface.
"""

[[package.metadata.bundle.osx.document_type]]
name = "Image"
role = "Viewer"
rank = "Alternate"
extensions = ["png", "jpg", "jpeg", "webp", "bmp", "tif", "tiff", "gif", "exr", "svg",
              "arw", "cr2", "cr3", "nef", "nrw", "orf", "raf", "rw2", "dng"]
utis = ["public.png", "public.jpeg", "org.webmproject.webp", "com.microsoft.bmp",
        "public.tiff", "com.compuserve.gif", "com.ilm.openexr-image",
        "public.svg-image", "com.adobe.raw-image", "com.canon.cr2-raw-image",
        "com.canon.cr3-raw-image", "com.nikon.raw-image", "com.olympus.raw-image",
        "com.fuji.raw-image", "com.panasonic.raw-image", "com.adobe.photoshop.raw-image"]

[package.metadata.bundle.deb]
maintainer = "Jesse Kretschmer <jesse@krets.com>"
section = "graphics"
priority = "optional"

# cargo-deb configuration — used instead of cargo-bundle for .deb packaging so
# that the AppStream metainfo file lands at /usr/share/metainfo/ (where KDE
# Discover and other AppStream consumers expect it). cargo-bundle puts resources
# under /usr/share/rivett/ which Discover never checks.
[package.metadata.deb]
maintainer = "Jesse Kretschmer <jesse@krets.com>"
copyright = "Copyright © 2026 Jesse Kretschmer (Minimal Humans)"
section = "graphics"
priority = "optional"
extended-description = """\
Rivett is a fast, keyboard-driven image viewer for sorting and vetting large \
collections. Built for photographers and digital artists who need to move \
quickly through images without the interface getting in the way.

Features hardware-accelerated gamma, exposure, and black/white point controls \
with histogram remap and clipping indicators for HDR images. Supports standard \
web formats (PNG, JPEG, WebP, BMP, GIF, TIFF), OpenEXR, SVG, and professional \
camera RAW formats via LibRaw. AI metadata from ComfyUI, Stable Diffusion, and \
MidJourney is surfaced at the top of the metadata panel.\
"""
assets = [
  ["target/release/rivett", "usr/bin/rivett", "755"],
  ["resources/rivett.desktop", "usr/share/applications/rivett.desktop", "644"],
  ["resources/com.minimalhumans.rivett.metainfo.xml", "usr/share/metainfo/com.minimalhumans.rivett.metainfo.xml", "644"],
  ["resources/icon.png", "usr/share/icons/hicolor/512x512/apps/rivett.png", "644"],
]

[[bin]]
name = "rivett"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------

[dependencies]
# UI — egui (immediate mode) + eframe host with OpenGL backend.
# Switch "glow" → "wgpu" here if you prefer the wgpu renderer.
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.28"
egui_glow = "0.28"
glow = "0.13"

# Image decoding (v1 formats only; keep default-features off for faster builds)
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
    "exr",
] }
resvg = "0.42"
rawloader = "0.37"
mp4 = "0.14"

# Persistence
rusqlite    = { version = "0.31", features = ["bundled"] }   # bundles SQLite
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"

# Utilities
log         = "0.4"
env_logger  = "0.11"
uuid        = { version = "1", features = ["v4"] }
dirs        = "5"   # platform config/data directories
trash       = "5"   # recycle bin support
rfd         = "0.14"  # native file/folder dialogs
showfile    = "0.1"   # open file manager
png         = "0.17"  # PNG chunk access for metadata (already transitive via image)
exif        = { package = "kamadak-exif", version = "0.6" }
drag        = "2"     # file drag-out to other applications
raw-window-handle = "0.6"  # explicit dep for drag-out window handle construction
img-parts   = "0.3"   # JPEG/PNG segment manipulation for lossless EXIF orientation writes
chrono      = "0.4"
bytemuck    = { version = "1", features = ["derive"] }
arboard = "3.6.1"

# ---------------------------------------------------------------------------
# Dev / test dependencies
# ---------------------------------------------------------------------------

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winres = "0.1"
vcpkg  = "0.2"

# Faster build
[profile.release-local]
inherits      = "release"
lto           = false
codegen-units = 16
strip         = false

# ---------------------------------------------------------------------------
# Release profile — small, fast binary
# ---------------------------------------------------------------------------
[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
